--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </aside>
 <footer>
     <p>
-        My Awesome Blog, made with ❤️ by Badr Bouaissa
+        My Awesome Blog, made with ❤️ by Badr Bouaissa and Clement Devarieux
         - <a href='https://gitlab.com/nin_/my-awesome-blog'>Source code</a>
     </p>
 </footer>
