--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="utf-8">
     <title>My Awesome Blog</title>
     <style>
+        #darkmodemenu {
+        position:absolute;
+        top:-40px;
+        right:16px;
+        padding:5px 20px 10px 18px;
+        border-bottom-left-radius:5px;
+        border-bottom-right-radius:5px;
+        z-index:-1;
+        transition: top 0.2s;
+        user-select: none;
+        }
+        #darkmodemenu input,#darkmodemenu label {
+        cursor:pointer;
+        }
         /**
             5) TODO: Ajouter du style à ce blog
             6) TODO:
@@ -12,7 +26,7 @@
 </head>
 <body>
 <header>
-    <h1>My Awesome Blog</h1>
+    <h1 style="color:tomato;">My Awesome Blog</h1>
     <nav>
         <a href="/index.html">
             Home
