--- a/fontamara.html
+++ b/fontamara.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-    <h1>My Awesome Blog</h1>
+    <h1 style="color: aquamarine;">My Awesome Blog</h1>
     <nav>
         <a href="/index.html">
             Home
